--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -63,6 +63,13 @@
                     android:layout_height="match_parent" />
 
             </FrameLayout>
+
+            <LinearLayout
+                android:id="@+id/subBarsContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
