display child progressbars

--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -65,7 +65,7 @@
             </FrameLayout>
 
             <LinearLayout
-                android:id="@+id/subBarsContainer"
+                android:id="@+id/childrenContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
