--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -26,7 +26,7 @@
 
             <TextView
                 android:id="@+id/textView"
-                style="@style/word_title"
+                style="@style/main_bar"
                 android:paddingBottom="5dp"
                 android:singleLine="true"
                 android:ellipsize="end"
@@ -53,7 +53,7 @@
 
                 <TextView
                     android:id="@+id/percentText"
-                    style="@style/word_title"
+                    style="@style/main_bar"
                     android:singleLine="true"
                     android:ellipsize="end"
                     android:gravity="center"
@@ -66,6 +66,7 @@
 
             <LinearLayout
                 android:id="@+id/childrenContainer"
+                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
