--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,10 +5,16 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="word_title">
+    <style name="main_bar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_marginBottom">8dp</item>
         <item name="android:paddingLeft">8dp</item>
         <item name="android:textAppearance">@android:style/TextAppearance.Large</item>
+    </style>
+
+    <style name="child_bar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginBottom">6dp</item>
+        <item name="android:textAppearance">@android:style/TextAppearance.Medium</item>
     </style>
 </resources>
