--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -24,14 +24,32 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/textView"
-                style="@style/main_bar"
-                android:paddingBottom="5dp"
-                android:singleLine="true"
-                android:ellipsize="end"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/textView"
+                    style="@style/main_bar"
+                    android:layout_weight="1"
+                    android:paddingBottom="5dp"
+                    android:singleLine="true"
+                    android:ellipsize="end"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" />
+
+                <ImageButton
+                    android:id="@+id/menuButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@android:drawable/ic_menu_more"
+                    android:contentDescription="Options menu"
+                    android:padding="4dp" />
+
+            </LinearLayout>
 
             <FrameLayout 
                 android:id="@+id/barLayout"
