--- a/app/src/main/res/layout/child_input_row.xml
+++ b/app/src/main/res/layout/child_input_row.xml
@@ -9,7 +9,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:hint="Title" />
+        android:inputType="textAutoComplete"
+        android:hint="@string/hint_word" />
 
     <EditText
         android:id="@+id/edit_child_progress"
