--- a/app/src/main/res/layout/child_bar.xml
+++ b/app/src/main/res/layout/child_bar.xml
@@ -8,6 +8,7 @@
     <TextView
         android:id="@+id/textView"
         style="@style/child_bar"
+        android:layout_marginBottom="0dp"
         android:singleLine="true"
         android:ellipsize="end"
         android:layout_width="match_parent"
