--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -34,7 +34,7 @@
                     android:id="@+id/textView"
                     style="@style/main_bar"
                     android:layout_weight="1"
-                    android:paddingBottom="5dp"
+                    android:layout_marginBottom="0dp"
                     android:singleLine="true"
                     android:ellipsize="end"
                     android:layout_width="0dp"
@@ -46,8 +46,7 @@
                     android:layout_height="wrap_content"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:src="@android:drawable/ic_menu_more"
-                    android:contentDescription="Options menu"
-                    android:padding="4dp" />
+                    android:contentDescription="Options menu" />
 
             </LinearLayout>
 
@@ -64,7 +63,6 @@
                     android:id="@+id/bar"
                     style="?android:attr/progressBarStyleHorizontal"
                     android:scaleY="12"
-                    android:layout_marginTop="1dp"
                     android:layout_gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
